2006-01-11:
	* src/session.c: no, I did touch that file last year.
	* src/pam_krb5.5.in: document the "ignore_afs" option.

2005-12-19:
	* src/items.c: include <stdio.h> to get the definition of NULL (Jesse
	Keating).
	* src/init.c: same bug, different file.

2005-11-21:
	* src/v5.c(v5_validate): don't leak the keytab file descriptor (patch
	from Daniel Colascione, #173681).

2005-11-15:
	* src/afs5log.c: actually check for AFS support first, so that the
	ioctl-only support case will work properly.

2005-11-07:
	* src/options.c: allow "validate" to be specified using a list of
	service names as well.

2005-11-07:
	* src/pam_krb5.5.in,src/pam_krb5.8.in: add proper quoting for arguments
	which include whitespace

2005-11-01:
	* src/stash.c(_pam_krb5_stash_shm_write_v5/4): initialize the segment
	key and owner in the stash when we write to it, in case the application
	decides to never call pam_end(), so that we can clean up the segment
	during session close.

2005-11-01:
	* src/stash.c,src/stash.h,src/shmem.csrc/shmem.h: log debug messages
	when we remove segments.

2005-10-31:
	* src/stash.c,src/stash.h,src/shmem.csrc/shmem.h: track the PID which
	created the shared memory segment, so that we don't try to remove it
	twice and accidentally stomp on another process.

2005-10-28:
	* src/session.c(pam_sm_open_session): dispose of shared memory segments
	once we've read their contents, in case we won't be able to dispose of
	them later (patch from Greg Wettstein).
	* src/shmem.c,src/shmem.h: add a _pam_krb5_shm_remove() function for
	use by the session functions (patch from Greg Wettstein).
	* src/stash.c,src/stash.h: add a v5shm/v4shm field to the stash
	structure to track the ID of the shared memory segment
	* src/session.c: don't leak the values of $KRB5CCNAME and $KRBTKFILE
	which we set; libpam makes copies of the values which are passed-in.
	* src/session.c: unset PAM environment variables by setting "<VAR>",
	not "<VAR>=", in accordance with the Linux-PAM docs.